# AUTOML_APP

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  AutoML_Streamlit_MVP.md  Dockerfile  IMPLEMENTATION_PLAN.md  Makefile  README.md  app.py  pyproject.toml  requirements-optional.txt  requirements.txt
.cursor/rules/: automl-project.mdc  ml-engine.mdc  python-style.mdc  service-layer.mdc  streamlit-ui.mdc
.streamlit/: config.toml
config/: __init__.py  settings.py
docs/manual/: 00_overview.md  01_projects.md  02_dataset_upload.md  03_training.md  04_results.md  05_models.md  06_prediction.md  07_admin.md  _hub_intro.md  troubleshooting.md
ml/: __init__.py  artifacts.py  balancing.py  evaluators.py  feature_engineering.py  feature_influence.py  preprocess.py  profiling.py  registry.py  schemas.py  trainers.py  type_inference.py
pages/: 00_manual.py  01_projects.py  02_dataset_upload.py  03_training.py  04_results.py  05_models.py  06_prediction.py  07_admin.py  __init__.py
pages/components/: __init__.py  data_preview.py  help.py  layout.py  toast.py
repositories/: __init__.py  audit_repository.py  base.py  dataset_repository.py  model_repository.py  models.py  prediction_repository.py  project_repository.py  training_repository.py
samples/: regression.csv
scripts/: check_plan_staged.sh  dev_run.sh  generate_samples.py  init_db.py  perf_bench.py  sync_streamlit_config.py
services/: __init__.py  admin_service.py  dataset_service.py  dto.py  model_service.py  prediction_service.py  project_service.py  training_service.py
tests/: conftest.py
tests/docs/: test_manual_files.py
tests/ml/: test_artifacts.py  test_balancing.py  test_evaluators.py  (+9 more)
utils/: __init__.py  db_utils.py  errors.py  events.py  file_utils.py  log_utils.py  messages.py  session_utils.py
(+32 files in other folders)
